--- a/richardsgcooke-wasm/Pages/Home.razor
+++ b/richardsgcooke-wasm/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Home of Richard SG Cooke</PageTitle>
 <h3>So the items below are a class, a razor component, and a loop on those.</h3>
-<p>Today I learned about Microsoft.AspNetCore.Components.MarkupString. I was trying to use html in a string but evidently theres a way for that. There are some double quotes to get around things. I think I can use single quotes inside the html and then just do double quotes for the c# stuff.</p>
+<p>Recently learned about Microsoft.AspNetCore.Components.MarkupString. I was trying to use html in a string but evidently theres a way for that. There are some double quotes to get around things. I think I can use single quotes inside the html and then just do double quotes for the c# stuff. The link below to the repo is a C# markup string. Seems handy for a blazor scenario maybe. Why not just put the html in with the code instead of it being stored in a db. Certainly there is a use case for it lol</p>
 
 @foreach (var item in projectItems)
 {
