--- a/richardsgcooke-wasm/Pages/Home.razor
+++ b/richardsgcooke-wasm/Pages/Home.razor
@@ -18,7 +18,7 @@
         projectItems.Add(new ProjectItem
         {
             Title = "This Site",
-            Description = new MarkupString("<p>This site is built with Blazor WebAssembly. It's a single page application that runs in the browser. It's written in C# and Razor. It's hosted on Apache/Ubuntu. It's a static site. It's a progressive web app. It's a lot of things!</p> <a href='https://github.com/richardsgcooke/richardsgcooke-wasm'>Oh, this repo lives here</a>"),
+            Description = new MarkupString("<p>This site is built with Blazor WebAssembly aka WASM. It's a single page application that runs in the browser. It's written in C# and Razor. It's hosted on Apache/Ubuntu. It's a static site. It's a progressive web app. It's a lot of things!</p> <a href='https://github.com/richardsgcooke/richardsgcooke-wasm'>Oh, this repo lives here</a>"),
         });
         projectItems.Add(new ProjectItem
             {
